moved to jstree

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "glob": "*",
     "minimatch": "*",
     "jquery": "^1",
-    "jqtree": "*"
+    "jstree": "*"
   },
   "devDependencies": {
     "grunt": "*"
