--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "generator",
     "literate"
   ],
-  "author": "Pranav Jha <sruthiin92@gmail.com> (https://github.com/smravi)",
+  "author": "Ravi Sruthi <sruthiin92@gmail.com> (https://github.com/smravi)",
   "contributors": [
     {
       "name": "sruthiravi",
