support for -i option

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "description": "Extending docco to work on multi-folder structures",
     "homepage": "http://smravi.github.io/docco-plus/",
     "main": "./lib",
-    "version": "1.0.2",
+    "version": "2.0.0-beta1",
     "scripts": {
         "test": "grunt jshint"
     },
