--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "docco-plus",
     "description": "Extending docco to work on multi-folder structures",
     "homepage": "http://smravi.github.io/docco-plus/",
-    "main": "./lib",
+    "main": "./lib/document",
     "version": "2.0.0-beta1",
     "scripts": {
         "test": "grunt jshint"
@@ -51,6 +51,7 @@
         "chai": "^3",
         "grunt": "^0",
         "grunt-contrib-clean": "^0",
+        "grunt-contrib-copy": "^0",
         "grunt-contrib-jshint": "^0",
         "grunt-coveralls": "^1.0.0",
         "grunt-docco-plus": "^1",
